variables.RunHalf.scala.error
Compilation error:
RunHalf:13: error: value update is not a member of java.awt.Color
  else if(getCouleurSol() = Color.orange) {
          ^